# personik-bot

./: README.md  pyproject.toml
bot/: .env.example  __main__.py  config.py
bot/handlers/: search.py  start.py
bot/services/: search.py
bot/templates/: search.j2  start.j2
bot/utils/: keyboard.py  response.py  templates.py
